style: fix mobile alignment and disable subtitle line on mobile

--- a/editor-components/call_to_action/call_to_action20/call_to_action20.module.scss
+++ b/editor-components/call_to_action/call_to_action20/call_to_action20.module.scss
@@ -64,7 +64,15 @@
       .header {
         align-items: center;
 
-        .subtitle,
+        .subtitle {
+          text-align: center;
+          transform: none;
+
+          &::before {
+            display: none;
+          }
+        }
+
         .title,
         .description {
           text-align: center;
